creation of the article card component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,5 +64,9 @@ a {
   background-color: transparent;
   border: none;
 }
+.grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+}
 
 
