--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,6 +67,8 @@ a {
 .grid{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+  justify-content: center;
+  align-items: center;
 }
 
 
